# libggi

./: .cvsignore  COPYING  ChangeLog  ChangeLog.1999  FAQ  INSTALL  INSTALL.autoconf  Makefile.am  NEWS  README  README.CVS  TODO  acconfig.h  autogen.sh  checkversion.sh  configure.in  genlibtool.in  libggi.conf.in  ltconfig  ltmain.sh  missing  mkinstalldirs  patchlib.c
default/: Makefile.am
default-shared/: Makefile.am
default/color/: EXPSYMS  Makefile.am  color.c  color.h  gamma.c  pack.c  visual.c
default/common/: Makefile.am  clip.c  linear-line.c
default/fbdev/: Makefile.am
default/ilbm/: EXPSYMS  Makefile.am  ilbmlib.h  pixel.c  pixela.c  visual.c
default/ioctl/: EXPSYMS  Makefile.am  box.c  copybox.c  ioctllib.h  line.c  visual.c
default/iplanar_2p/: EXPSYMS  Makefile.am  ipl2lib.h  pixel.c  pixela.c  visual.c
default/kgi/: EXPSYMS  Makefile.am  box.c  copybox.c  line.c  visual.c
default/kgi/ATI/: Makefile.am
default/kgi/ATI/Mach64/: EXPSYMS  Makefile.am  box.c  gc.c  line.c  mach64_accel.h  visual.c
default/kgi/ATI/Radeon/: EXPSYMS  Makefile.am  box.c  crossblit.c  gc.c  gtext.c  line.c  radeon_accel.h  radeon_cce.h  visual.c
default/kgi/Matrox/: Makefile.am
default/kgi/Matrox/Gx00/: EXPSYMS  Gx00.h  Gx00_accel.h  Makefile.am  box.c  gc.c  gtext.c  line.c  visual.c
default/linear_1/: EXPSYMS  Makefile.am  color.c  gtext.c  hline.c  lin1lib.h  pixel.c  pixela.c  visual.c  vline.c
default/linear_16/: EXPSYMS  Makefile.am  box.c  copybox.c  crossblit.c  fillscreen.c  hline.c  lin16lib.h  line.c  pixel.c  pixela.c  visual.c  vline.c
default/linear_1_r/: EXPSYMS  Makefile.am  color.c  gtext.c  hline.c  lin1rlib.h  pixel.c  pixela.c  visual.c  vline.c
default/linear_2/: EXPSYMS  Makefile.am  color.c  hline.c  lin2lib.h  pixel.c  pixela.c  visual.c  vline.c
default/linear_24/: EXPSYMS  Makefile.am  box.c  copybox.c  crossblit.c  fillscreen.c  hline.c  lin24lib.h  pixel.c  pixela.c  visual.c  vline.c
default/linear_2_r/: EXPSYMS  Makefile.am  color.c  hline.c  lin2rlib.h  pixel.c  pixela.c  visual.c  vline.c
default/linear_32/: EXPSYMS  Makefile.am  box.c  copybox.c  crossblit.c  fillscreen.c  hline.c  lin32lib.h  line.c  pixel.c  pixela.c  visual.c  vline.c
default/linear_4/: EXPSYMS  Makefile.am  color.c  copybox.c  hline.c  lin4lib.h  pixel.c  pixela.c  visual.c  vline.c
default/linear_4_r/: EXPSYMS  Makefile.am  color.c  copybox.c  hline.c  lin4rlib.h  pixel.c  pixela.c  visual.c  vline.c
default/linear_8/: EXPSYMS  Makefile.am  box.c  copybox.c  crossblit.c  fillscreen.c  gtext.c  hline.c  lin8lib.h  line.c  pixel.c  pixela.c  visual.c  vline.c
default/linmm_banked/: EXPSYMS  Makefile.am  README.linmm_banked  hline.c  linmm_banked.h  pixel.c  visual.c  vline.c
default/planar/: EXPSYMS  Makefile.am  pixel.c  pixela.c  pllib.h  visual.c
default/pseudo_stubs/: EXPSYMS  Makefile.am  visual.c
default/ramdac/: EXPSYMS  Makefile.am  color.c  visual.c
default/stubs/: EXPSYMS  Makefile.am  box.c  copybox.c  crossblit.c  fillscreen.c  gtext.c  hline.c  line.c  pixel.c  stublib.h  visual.c  vline.c
default/text_16/: EXPSYMS  Makefile.am  color.c  gtext.c  pixel.c  pixela.c  t16lib.h  visual.c
default/text_32/: EXPSYMS  Makefile.am  color.c  gtext.c  pixel.c  pixela.c  t32lib.h  visual.c
display/: Makefile.am
display-shared/: Makefile.am
display/X/: EXPSYMS  Makefile.am  README  box.c  buffer.c  color.c  color.inc  dbs.inc  fillscreen.c  gtext.c  hline.c  line.c  listener.c  man.txt  man.xml  misc.c  mode.c  mode.inc  pixel.c  visual.c  visual.inc  vline.c
display/X/helper/: Makefile.am
display/X/helper/dbe/: EXPSYMS  Makefile.am  dbe.c
display/X/helper/dga/: EXPSYMS  Makefile.am  dga.c
display/X/helper/evi/: EXPSYMS  Makefile.am  evi.c
display/X/helper/shm/: EXPSYMS  Makefile.am  shm.c
display/X/helper/vidmode/: EXPSYMS  Makefile.am  vidmode.c
display/Xlib/: EXPSYMS  Makefile.am  box.c  color.c  fillscreen.c  gtext.c  hline.c  line.c  mode.c  pixel.c  visual.c  vline.c
display/aa/: EXPSYMS  Makefile.am  color.c  giievents.c  listener.c  man.txt  man.xml  mode.c  visual.c
display/auto/: EXPSYMS  Makefile.am  man.txt  probe.c  visual.c
display/auto/os/: common.inc  darwin.c  defaultos.c  freebsd.c  linux.c  netbsd.c  openbsd.c  os.am  os.h  solaris.c  win32.c
display/common/: Makefile.am  ggi-auto-physz.inc  ggi-auto.inc  gt-auto.inc  modelist.inc  pixfmt-setup.inc
display/directx/: EXPSYMS  Makefile.am  cursor.inc  ddcommon.c  ddinit.c  ddinit.h  ddinitnt.c  dxguid.c  man.txt  man.xml  mode.c  visual.c
display/fbdev/: EXPSYMS  Makefile.am  color.c  fbdev.conf.in  man.txt  man.xml  mode.c  pan.c  visual.c
display/file/: EXPSYMS  Makefile.am  fileio.c  man.txt  man.xml  mode.c  ppm.c  visual.c  yuv.c
display/glide/: EXPSYMS  Makefile.am  README.glide  box.c  fb.c  gtext.c  line.c  man.txt  man.xml  mode.c  pixel.c  visual.c
display/ipc/: EXPSYMS  Makefile.am  man.txt  mode.c  visual.c
display/kgi/: Makefile.am  accel.c  color.c  events.c  kgi.c  kgi.conf.in  kgiUser.c  kgiUser.h  kgi_hurd.c  man.txt  mode.c  visual.c
display/lcd823/: EXPSYMS  Makefile.am  color.c  mode.c  visual.c
display/libkgi/: EXPSYMS  Makefile.am  drawops.c  gcops.c  libkgi.conf.in  visual.c
display/linvtsw/: EXPSYMS  Makefile.am  visual.c
display/mansync/: EXPSYMS  Makefile.am  (+7 more)
doc/: Makefile.am  README.directx  bdgtgp.txt  checkmode.txt  env.txt  libggi-colormap.txt  libggi-functions.txt  libggi-libraries.txt  libggi-structures.txt  libggi-triple-int.txt  libggi.txt  targets.txt
extensions/: Makefile.am
ggi/: EXPSYMS  Makefile.am  builtins.am  builtins.c  colormap.c  db.c  dl.c  events.c  ext.c  ext.h  gc.c  genconf.awk  genconf.sh  init.c  internal.c  mode.c  probe.c  stubs.c  swar.c  swar.h  unix.c  visual.c
include/: Makefile.am
m4/: Makefile.am  common.m4  compiler.m4  dllext.m4  extrapaths.m4  gg_paths.m4  gii_paths.m4  libtool.m4  ltdl.m4  ltversion.m4  mmap.m4  os.m4  rellibdir.m4  strings.m4  swar.m4  threads.m4
programs/: Makefile.am
scripts/: bindist.head  configure  doinstall  ggiinstall
(+718 files in other folders)
